# pitchoune

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  setup.cfg
pitchoune/: aggregation.py  column.py  group.py  table.py  type.py  utils.py
tests/: test_column.py  test_table.py  test_types.py
