[metadata]
name = pitchoune
version = 0.5.0
author = Pierre-Emmanuel Brian
description = A minimal framework to transform data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peb-8/pitchoune
project_urls =
    Bug Tracker = https://github.com/peb-8/pitchoune/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    prettytable == 0.2.12
    typeguard == 4.1.5

[options.packages.find]
where = src